# office-skill

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  office_cli.py  package.json  pyproject.toml
.claude/: settings.local.json
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-gitignore-output-blocked.txt  task-1-gitignore-test-files.txt  task-10-black-check.txt  task-10-imports-work.txt  task-2-jinja2-present.txt  task-2-markupsafe-removed.txt  task-3-cli-entry-point.txt  task-3-py-typed.txt  task-4-classifiers.txt  task-4-python-versions.txt  task-5-mypy-strict.txt  task-5-ruff-rules.txt  task-6-handler-inheritance.txt  task-6-handler-works.txt  task-6-import-abc.txt  task-7-cli-wrapper.txt  task-7-method-signatures.txt  task-8-import-analyzer.txt  task-8-type-checking.txt  task-9-imports-work.txt  task-9-ruff-check.txt
.sisyphus/notepads/optimization-fixes/: learnings.md
.sisyphus/plans/: init-deep.md  optimization-fixes.md
examples/: README.md  analyze_document.md  basic_template_management.md  basic_usage.py  convert_to_markdown.md  financial_model.py  generate_document_from_template.md  presentation_deck.py  template_example.py
openclaw_skills/: 01_OFFICE_SKILL.md  02_DOCX_SKILL.md  03_XLSX_SKILL.md  04_PPTX_SKILL.md  _meta.json
skills/: 04_PPTX_SKILL.md  05_TEMPLATE_SKILL.md  AGENTS.md  _meta.json
src/claude_skill/: index.js  office_bridge.py  skill.json
src/office_main/: AGENTS.md  __init__.py
src/office_main/cli/: AGENTS.md  office_cli.py
src/office_main/core/: AGENTS.md  __init__.py  base_handler.py  cli_wrapper.py  docx_handler.py  pptx_handler.py  template_handler.py  xlsx_handler.py
src/office_skill/: __init__.py  cli_wrapper.py  docx_handler.py  pptx_handler.py  template_handler.py  xlsx_handler.py
src/office_skill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/template_manager/: AGENTS.md  __init__.py  analyzer.py  generator.py  search.py  storage.py
templates/meeting/signin/nameplate/chinese/v1/: metadata.json  original.docx  template.md
tests/: test_basic.py  席签.docx
