[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "office-skill"
version = "0.1.0"
description = "Office document processing tool using cli-anything-libreoffice"
readme = "README.md"
authors = [
    {name = "Office Skill Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "cli-anything-libreoffice>=0.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/example/office-skill"
Repository = "https://github.com/example/office-skill"
Issues = "https://github.com/example/office-skill/issues"

[project.scripts]
office-skill = "office_main.cli.office_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
office_main = ["py.typed"]
template_manager = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
strict = false
exclude = [
    "tests",
]
ignore_missing_imports = true

